arrow n bottom whitespace fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,18 @@ body{
   margin: 0;
   display: flex;
   flex-direction: column;
-
+  overflow: hidden;
+  height: 100%;
 }
+
+.wrapper {
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  perspective: 10px;
+  
+}
+
 .heading{
   font-weight: 500;
 }
@@ -276,12 +286,7 @@ body{
   position: relative;
 }
 
-.wrapper {
-  height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  perspective: 10px;
-}
+
 
 
 .sec5{
@@ -289,7 +294,7 @@ body{
   align-items: center;
   justify-content: center;
   gap: 10rem;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url('./assets/halftone.png');
   background-repeat: no-repeat;
   background-size: cover;
